- AI:
	- Fix AttackVIP targeting priority impacting target priority weighting if no enemy VIP is present.
	- When assigning turret targets, AI now checks if target is within max range of the turret.
- Weapons:
	- Remove maxEngagementRange (default 5000m) check from bombs when AI is selecting what weapon to use.
	- Fix aim lead offset for weapons with deploy animations.

v1.10.0.0
IMPROVEMENTS / FIXES
- General:
	- Fix colliders on the AWACS Radar when using legless variant.
	- Update the logic for syncing advanced 'Game Difficulty' settings to respect custom G-limit settings.
- UI:
	- Add an alternate layout to the entries in the vessel switcher, togglable via the ↔ button.
	- Adjust colour of vessel status and target strings in the vessel switcher for better visibility.
	- Update localisation synchronisation script and sync en-us to other languages. Missing entries are commented out and tagged with ??? and the English translation (to assist with user contributions).
	- Fix the wrongly labeled "ru-ru" localisation to "ru" so that it loads properly.
	- Add additional Chinese localisation thanks to user ZIYUXUAN201011.
	- Updated German localisation from EzBro.
	- Adjust waypoint ranking in the vessel switcher window to be based on the current score weights.
	- Fix m/km units in Team Icons to be used appropriately.
	- Automatically disable team scores in the score window when running FFA tournaments or continuous spawning.
- AI:
	- Improvements to pilot follow mode to improve stability.
	- Fix check for overriding terrain avoidance when ramming ground targets.
	- Fix AI always seeing all LoS targets within 200km regardless of view range or radar detection.
	- The AI targeting priority 'Aerial Target Preference' now considers craft flatspinning or otherwise possessing negligible horizontal velocity lower than 200m from the ground as semi-ground targets for target filtering.